fix project filter caption alignment

--- a/src/Theme/index.css
+++ b/src/Theme/index.css
@@ -124,6 +124,10 @@ li ul li {
   );
 }
 
+.Left {
+  text-align: left;
+}
+
 .Cnt {
   text-align: center;
 }
